Upgraded influxdb to v2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,17 +57,24 @@ services:
       - /etc/localtime:/etc/localtime:ro
 
   influxdb:
-    image: influxdb:1.8.9
+    image: influxdb:2.1.0
     container_name: influxdb 
     restart: unless-stopped
     hostname: influxdb
     environment:
-      - INFLUXDB_DB=home_assistant
-      - INFLUXDB_USER=${INFLUXDB_USER}
-      - INFLUXDB_USER_PASSWORD=${INFLUXDB_USER_PASSWORD}
+      - DOCKER_INFLUXDB_INIT_MODE=setup
+      - DOCKER_INFLUXDB_INIT_USERNAME=${INFLUXDB_USER}
+      - DOCKER_INFLUXDB_INIT_PASSWORD=${INFLUXDB_USER_PASSWORD}
+      - DOCKER_INFLUXDB_INIT_ORG=home
+      - DOCKER_INFLUXDB_INIT_BUCKET=home-assistant
+        #      - INFLUXDB_DB=home_assistant
+        #      - INFLUXDB_USER=${INFLUXDB_USER}
+        #      - INFLUXDB_USER_PASSWORD=${INFLUXDB_USER_PASSWORD}
     volumes:
-      - /home/tim/influxdb:/var/lib/influxdb
-      - /home/tim/influxdb/influxdb.conf:/etc/influxdb/influxdb.conf
+      #      - /home/tim/influxdb:/var/lib/influxdb
+      #      - /home/tim/influxdb.conf:/etc/influxdb/influxdb.conf
+      - /home/tim/influxdb2:/var/lib/influxdb2
+      - /home/tim/influxdb2:/etc/influxdb2
     ports:
       - 8086:8086
 
@@ -90,6 +97,7 @@ services:
     image: telegraf:1.20.3 
     container_name: telegraf
     hostname: telegraf
+    user: telegraf:998
     privileged: true
     depends_on:
       - influxdb
@@ -99,7 +107,10 @@ services:
     environment:
       - HOST_PROC=/hostfs/proc
       - HOST_MOUNT_PREFIX=/hostfs
-      - TELEGRAF_DB_PASSWORD=${TELEGRAF_DB_PASSWORD}
+        #      - TELEGRAF_DB_PASSWORD=${TELEGRAF_DB_PASSWORD}
+      - TELEGRAF_INFLUXDB_TOKEN=${TELEGRAF_INFLUXDB_TOKEN}
+      - TELEGRAF_INFLUXDB_ORG=${TELEGRAF_INFLUXDB_ORG}
+      - TELEGRAF_INFLUXDB_BUCKET=${TELEGRAF_INFLUXDB_BUCKET}
     volumes:
       - /:/hostfs:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
