--- a/services/telegraf/telegraf.conf
+++ b/services/telegraf/telegraf.conf
@@ -19,24 +19,32 @@
 ###############################################################################
 
 # Configuration for sending metrics to InfluxDB
-[[outputs.influxdb]]
-  ## The full HTTP or UDP URL for your InfluxDB instance.
+[[outputs.influxdb_v2]]
+  ## The URLs of the InfluxDB cluster nodes.
   ##
   ## Multiple URLs can be specified for a single cluster, only ONE of the
   ## urls will be written to each interval.
-  # urls = ["unix:///var/run/influxdb.sock"]
+  ##   ex: urls = ["https://us-west-2-1.aws.cloud2.influxdata.com"]
   urls = ["http://192.168.1.100:8086"]
 
-  ## The target database for metrics; will be created as needed.
-  ## For UDP url endpoint database needs to be configured on server side.
-  database = "telegraf"
+  ## Token for authentication.
+  token = "${TELEGRAF_INFLUXDB_TOKEN}"
 
-  ## If true, the database tag will not be added to the metric.
-  exclude_database_tag = true
+  ## Organization is the name of the organization you wish to write to.
+  organization = "${TELEGRAF_INFLUXDB_ORG}"
 
-  ## HTTP Basic Auth
-  username = "telegraf"
-  password = "${TELEGRAF_DB_PASSWORD}"
+  ## Destination bucket to write into.
+  bucket = "${TELEGRAF_INFLUXDB_BUCKET}"
+
+  ## If true, the bucket tag will not be added to the metric.
+  exclude_bucket_tag = true
+
+  ## Optional TLS Config for use on HTTP connections.
+  # tls_ca = "/etc/telegraf/ca.pem"
+  # tls_cert = "/etc/telegraf/cert.pem"
+  # tls_key = "/etc/telegraf/key.pem"
+  ## Use TLS but skip chain & host verification
+  # insecure_skip_verify = false
 
 ###############################################################################
 #                            INPUT PLUGINS                                    #
