--- a/renovate.json
+++ b/renovate.json
@@ -22,6 +22,11 @@
     },
     {
       "matchDatasources": ["docker"],
+      "matchPackageNames": ["linuxserver/bazarr"],
+      "versionScheme": "regex:^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ls(\\d+)?$"
+    },
+    {
+      "matchDatasources": ["docker"],
       "matchPackageNames": ["linuxserver/jackett"],
       "versionScheme": "regex:^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ls(\\d+)?$"
     },
