--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     hostname: homeassistant 
     network_mode: host
     depends_on:
+      - web
       - transmission
       - deconz
       - influxdb
@@ -46,6 +47,8 @@ services:
     container_name: deconz
     hostname: deconz 
     network_mode: host
+    depends_on:
+      - web
     restart: unless-stopped
     environment:
       - DECONZ_WEB_PORT=8080
@@ -64,6 +67,8 @@ services:
     container_name: influxdb 
     restart: unless-stopped
     hostname: influxdb
+    depends_on:
+      - web
     environment:
       - DOCKER_INFLUXDB_INIT_MODE=setup
       - DOCKER_INFLUXDB_INIT_USERNAME=${INFLUXDB_USER}
@@ -81,6 +86,7 @@ services:
     hostname: grafana
     user: 0:0
     depends_on:
+      - web
       - telegraf
     restart: unless-stopped
     volumes:
@@ -97,6 +103,7 @@ services:
     user: telegraf:998
     privileged: true
     depends_on:
+      - web
       - influxdb
     restart: unless-stopped
     links:
@@ -116,6 +123,8 @@ services:
     image: linuxserver/transmission:3.00-r2-ls107
     container_name: transmission
     hostname: transmission
+    depends_on:
+      - web
     environment:
       - PUID=1000
       - PGID=1000
@@ -140,6 +149,7 @@ services:
     container_name: sonarr
     hostname: sonarr
     depends_on:
+      - web
       - jackett
       - transmission
     environment:
@@ -161,6 +171,7 @@ services:
     container_name: radarr
     hostname: radarr
     depends_on:
+      - web
       - jackett
       - transmission
     environment:
@@ -181,6 +192,8 @@ services:
     image: linuxserver/jackett:v0.20.200-ls54
     container_name: jackett
     hostname: jackett
+    depends_on:
+      - web
     environment:
       - PUID=1000
       - PGID=1000
@@ -200,6 +213,7 @@ services:
     hostname: plex
     network_mode: host
     depends_on:
+      - web
       - sonarr
       - radarr
     environment:
@@ -222,6 +236,8 @@ services:
       - 53:53/udp
       - 67:67/udp
       - 8380:80/tcp
+    depends_on:
+      - web
     environment:
       - TZ=Netherlands/Amsterdam
       - WEBPASSWORD=${PIHOLE_PASSWORD}
