Adding DuckDNS to home-web network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
       - TOKEN=${DUCKDNS_TOKEN}
       - SUBDOMAINS=timsdomain
     restart: unless-stopped
+    networks:
+      - home-web
 
   homeassistant:
     image: homeassistant/home-assistant:2022.9.2
