Trying to fix renovate json file

--- a/renovate.json
+++ b/renovate.json
@@ -7,12 +7,12 @@
   "packageRules": [
     {
       "matchDatasources": ["docker"],
-      "matchPackageNames": ["lscr.io/linuxserver/swag"],
+      "matchPackageNames": ["linuxserver/swag"],
       "versionScheme": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ls(?<patch>\\d+)?$"
     },
     // {
     //   "matchDatasources": ["docker"],
-    //   "matchPackageNames": ["lscr.io/linuxserver/duckdns"],
+    //   "matchPackageNames": ["linuxserver/duckdns"],
     //   "versionScheme": "regex:^(?<major>)-ls(?<minor>\\d+)?$"
     // },
     {
