--- a/renovate.json
+++ b/renovate.json
@@ -10,11 +10,11 @@
       "matchPackageNames": ["linuxserver/swag"],
       "versionScheme": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ls(?<patch>\\d+)?$"
     },
-    // {
-    //   "matchDatasources": ["docker"],
-    //   "matchPackageNames": ["linuxserver/duckdns"],
-    //   "versionScheme": "regex:^(?<major>)-ls(?<minor>\\d+)?$"
-    // },
+    {
+      "matchDatasources": ["docker"],
+      "matchPackageNames": ["linuxserver/duckdns"],
+      "versionScheme": "regex:^(?<major>)-ls(?<minor>\\d+)?$"
+    },
     {
       "matchDatasources": ["docker"],
       "matchPackageNames": ["linuxserver/transmission"],
