--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -203,7 +203,7 @@ services:
       - home-web
   
   radarr:
-    image: linuxserver/radarr:3.2.2.5080-ls105
+    image: linuxserver/radarr:nightly-4.2.4.6605-ls370
     container_name: radarr
     hostname: radarr
     depends_on:
