--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,28 +75,29 @@ services:
       - TZ=Europe/Amsterdam
     devices:
       - /dev/ttyAMA0
+      - /dev/ttyACM0
     volumes:
       - /home/tim/homeassistant/config:/config
 
-  deconz:
-    image: deconzcommunity/deconz:2.19.01
-    container_name: deconz
-    hostname: deconz 
-    network_mode: host
-    depends_on:
-      - web
-    restart: unless-stopped
-    environment:
-      - DECONZ_WEB_PORT=8080
-      - DECONZ_WS_PORT=8443
-      - TZ=Europe/Amsterdam
-      - DECONZ_UPNP=0
-      - DECONZ_DEVICE=/dev/ttyACM0 
-    devices:
-     - /dev/ttyACM0
-    volumes:
-      - /home/tim/deconz/config:/opt/deCONZ
-      - /etc/localtime:/etc/localtime:ro
+        #  deconz:
+        #    image: deconzcommunity/deconz:2.19.01
+        #    container_name: deconz
+        #    hostname: deconz 
+        #    network_mode: host
+        #    depends_on:
+        #      - web
+        #    restart: unless-stopped
+        #    environment:
+        #      - DECONZ_WEB_PORT=8080
+        #      - DECONZ_WS_PORT=8443
+        #      - TZ=Europe/Amsterdam
+        #      - DECONZ_UPNP=0
+        #      - DECONZ_DEVICE=/dev/ttyACM0 
+        #    devices:
+        #     - /dev/ttyACM0
+        #    volumes:
+        #      - /home/tim/deconz/config:/opt/deCONZ
+        #      - /etc/localtime:/etc/localtime:ro
 
   influxdb:
     image: influxdb:2.4.0
