Commenting out deconz; setting deconz to be used by HA

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ services:
     depends_on:
       - web
       - transmission
-      - deconz
+        #      - deconz
       - influxdb
       - grafana
       - telegraf
