--- a/renovate.json
+++ b/renovate.json
@@ -15,30 +15,10 @@
       "matchPackageNames": ["linuxserver/duckdns"],
       "versionScheme": "regex:^(?<major>)-ls(?<minor>\\d+)?$"
     },
-    {
-      "matchDatasources": ["docker"],
-      "matchPackageNames": ["linuxserver/transmission"],
-      "versionScheme": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)-r2-ls(?<patch>\\d+)?$"
-    },
-    {
-      "matchDatasources": ["docker"],
-      "matchPackageNames": ["linuxserver/sonarr"],
-      "versionScheme": "regex:^3\\.(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ls(\\d+)?$"
-    },
-    {
+	{
       "matchDatasources": ["docker"],
       "matchPackageNames": ["linuxserver/radarr"],
-      "versionScheme": "regex:^nightly-4\\.(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ls(\\d+)?$"
-    },
-    {
-      "matchDatasources": ["docker"],
-      "matchPackageNames": ["linuxserver/jackett"],
-      "versionScheme": "regex:^v(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-ls(\\d+)?$"
-    },
-    {
-      "matchDatasources": ["docker"],
-      "matchPackageNames": ["linuxserver/plex"],
-      "versionScheme": "regex:^1\\.(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(\\d*\\w*)-ls(\\d+)?$"
+      "versionScheme": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-nightly?$"
     }
   ]
 }
