--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,7 +83,7 @@ services:
       - home-web
 
   homeassistant:
-    image: homeassistant/home-assistant:2023.6.3
+    image: ghcr.io/home-assistant/home-assistant:2023.7.1
     container_name: homeassistant
     hostname: homeassistant 
     network_mode: host
