--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -231,6 +231,7 @@ services:
     hostname: jackett
     depends_on:
       - web
+      - flaresolverr
     environment:
       - PUID=1000
       - PGID=1000
@@ -240,6 +241,22 @@ services:
       - /home/tim/nas/media/transmission/watch:/downloads
     ports:
       - 9117:9117
+    restart: unless-stopped
+    networks:
+      - home-web
+
+  flaresolverr:
+    # DockerHub mirror flaresolverr/flaresolverr:latest
+    image: ghcr.io/flaresolverr/flaresolverr:latest
+    container_name: flaresolverr
+    hostname: flaresolverr
+    environment:
+      - LOG_LEVEL=${LOG_LEVEL:-info}
+      - LOG_HTML=${LOG_HTML:-false}
+      - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
+      - TZ=Europe/Amsterdam
+    ports:
+      - "${PORT:-8191}:8191"
     restart: unless-stopped
     networks:
       - home-web
